--- a/apps/templates/bookmodule/one_book.html
+++ b/apps/templates/bookmodule/one_book.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="book-detail">
-        <a href="{% url books.list_books' %}" class="back-link">Go Back</a>
+        <a href="{% url 'books.list_books' %}" class="back-link">Go Back</a>
         
         <h1>Details of Book1</h1>
         <h2>Internet & World Wide Web How to Program</h2>
