--- a/apps/templates/bookmodule/task5.html
+++ b/apps/templates/bookmodule/task5.html
@@ -9,12 +9,12 @@
 
 <body>
     <h1>Book Collection</h1>
+    number of books : {{total}}
+    total price : {{tprice}}
+    avg price : {{aprice}}
+    max price : {{maxprice}}
+    min price : {{minprice}}
     
-
-    {% for obj in books %}
-    ID: {{obj.id}}, Title: {{obj.title}}, price : {{obj.price}}
-    <hr>
-    {% endfor %}
 
 </body>
 </html>
